--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                         </h3>
                     </div>
                 </div>
-                <img src="imgs/reportagem.png" class="img-fluid" alt="">
-                <a class="ler-exc" href="https://predv.s3-sa-east-1.amazonaws.com/cadeira.html?src=maitebernardes&fbid=419638628766550">LER AGORA >>></a>
+                <a href="https://predv.s3-sa-east-1.amazonaws.com/cadeira.html?src=maitebernardes&fbid=419638628766550"></a><img src="imgs/reportagem.png" class="img-fluid" alt="">
+                <span class="ler-exc">LER AGORA >>></span></a>
             </div>
         </div>
 
