--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </h3>
                     </div>
                 </div>
-                <a href="https://predv.s3-sa-east-1.amazonaws.com/cadeira.html?src=maitebernardes&fbid=419638628766550"><img src="imgs/reportagem.png" class="img-fluid" alt="">
+                <a href="https://predv.s3-sa-east-1.amazonaws.com/cadeira.html?src=leticiaferreira&fbid=1329880870498019"><img src="imgs/reportagem.png" class="img-fluid" alt="">
                 <span class="ler-exc">LER AGORA >>></span></a>
             </div>
         </div>
