--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div>
                         <h3>
-                            Entrevistado, conta sua história, da depressão até a volta por cima.
+                            Clique na imagem para descobrir
                         </h3>
                     </div>
                 </div>
